positioning views folder to avoid error

--- a/express-ejs/views/home.ejs
+++ b/express-ejs/views/home.ejs
@@ -5,15 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+
+        p {
+            color: #666;
+            line-height: 1.5;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Homepage</h1>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid itaque vitae tenetur quos doloribus deleniti
-        delectus, voluptates natus distinctio nulla similique minus corrupti omnis temporibus perspiciatis a quasi,
-        fugiat reprehenderit.
-    </p>
+    <div class="container">
+        <h1>Welcome to our website</h1>
+        <p>
+            This is the homepage of our website. Feel free to explore and discover more about our services and products.
+        </p>
+    </div>
 </body>
 
 </html>
