set interpolation syntax ejs

--- a/express-ejs/views/home.ejs
+++ b/express-ejs/views/home.ejs
@@ -34,6 +34,7 @@
 <body>
     <div class="container">
         <h1>Welcome to our website</h1>
+        <h3> <%= "Hi everyone 👋" %> </h3>
         <p>
             This is the homepage of our website. Feel free to explore and discover more about our services and products.
         </p>
