use if else statement in ejs

--- a/express-ejs/views/random.ejs
+++ b/express-ejs/views/random.ejs
@@ -16,9 +16,16 @@
             margin-top: 200px;
             font-size: 48px;
         }
+
+        p {
+            text-align: center;
+            font-size: 24px;
+        }
     </style>
 </head>
 <body>
     <h1>Random Number: <%= num %></h1>
+
+    <p>That Number is : <%= num%2 === 0 ? 'even' : 'odd' %></p>
 </body>
 </html>
