change add favicon in tag.ejs

--- a/express-ejs/views/tag.ejs
+++ b/express-ejs/views/tag.ejs
@@ -60,6 +60,9 @@
             color: #333;
         }
     </style>
+    <% if(data.img) { %>
+        <link rel="icon" href="<%= data.img %>">
+    <% } %>
 </head>
 <body>
     <div class="container">
