--- a/express-ejs/views/tag.ejs
+++ b/express-ejs/views/tag.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= data.title %> - Dev Com</title>
-    <style>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <!-- <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -59,12 +60,35 @@
             margin: 0;
             color: #333;
         }
-    </style>
+    </style> -->
     <% if(data.img) { %>
         <link rel="icon" href="<%= data.img %>">
     <% } %>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">EJS</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/t/javascript">Javascript</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/rand">Random</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <br>
+
+
+
     <div class="container">
         <div class="image-container">
             <% if(data.img) { %>
@@ -82,5 +106,6 @@
         </article>
         <% } %>
     </div>
+    <script src="/js/bootstrap-.min.js"></script>
 </body>
 </html>
