--- a/express-ejs/views/home.ejs
+++ b/express-ejs/views/home.ejs
@@ -1,44 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('partials/header.ejs') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            margin: 0;
-            padding: 0;
-        }
+    <%- include('partials/navbar.ejs') %>
 
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
+        <div class="container">
+            <h1>Welcome to our website</h1>
+            <h3>
+                <%= "Hi everyone 👋" %>
+            </h3>
+            <p>
+                This is the homepage of our website. Feel free to explore and discover more about our services and
+                products.
+            </p>
+        </div>
 
-        h1 {
-            color: #333;
-            text-align: center;
-        }
-
-        p {
-            color: #666;
-            line-height: 1.5;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <h1>Welcome to our website</h1>
-        <h3> <%= "Hi everyone 👋" %> </h3>
-        <p>
-            This is the homepage of our website. Feel free to explore and discover more about our services and products.
-        </p>
-    </div>
-</body>
-
-</html>
+        <%- include('partials/footer.ejs') %>
