--- a/express-ejs/views/notfound.ejs
+++ b/express-ejs/views/notfound.ejs
@@ -1,23 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= tag %></title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-        }
-        
-        h1 {
-            color: #333;
-            text-align: center;
-            margin-top: 200px;
-        }
-    </style>
-</head>
-<body>
-    <h1><%= tag %> is not found</h1>
-</body>
-</html>
+<%- include('partials/header.ejs') %>
+
+    <%- include('partials/navbar.ejs') %>
+
+        <h1>
+            <%= tag %> is not found
+        </h1>
+
+        <%- include('partials/footer.ejs') %>
