--- a/express-ejs/views/random.ejs
+++ b/express-ejs/views/random.ejs
@@ -1,31 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random</title>
-    <style>
-        body {
-            background-color: #f2f2f2;
-            font-family: Arial, sans-serif;
-        }
-        
-        h1 {
-            color: #333;
-            text-align: center;
-            margin-top: 200px;
-            font-size: 48px;
-        }
+<%- include('partials/header.ejs') %>
 
-        p {
-            text-align: center;
-            font-size: 24px;
-        }
-    </style>
-</head>
-<body>
-    <h1>Random Number: <%= num %></h1>
+    <%- include('partials/navbar.ejs') %>
 
-    <p>That Number is : <%= num%2 === 0 ? 'even' : 'odd' %></p>
-</body>
-</html>
+        <h1>Random Number: <%= num %>
+        </h1>
+
+        <p>That Number is : <%= num%2===0 ? 'even' : 'odd' %>
+        </p>
+
+        <%- include('partials/footer.ejs') %>
