--- a/express-ejs/views/partials/header.ejs
+++ b/express-ejs/views/partials/header.ejs
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="https://avatars.githubusercontent.com/u/20827202?s=200&v=4" />
     <title>Website</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
+
 <body>
